<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppointmentBookingSystem</string>
    <string name="welcome">Welcome to book appointment</string>
    <string name="register_doctor">Register doctor</string>
    <string name="register_patient">Register Patient</string>
    <string name="check_appointment">Check appointment</string>
    <string name="placeholder_name">(name)</string>
    <string name="placeholder">\???</string>
    <string name="upcoming_schedule">Upcoming Schedule</string>
    <string name="welcome_back">Welcome back</string>
    <string name="see_all">See All</string>
    <string name="nearby_doctor">Nearby Doctor</string>
    <string name="name">Enter your full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobileno">Mobile Number</string>
    <string name="password">Password</string>
    <string name="reason">Explain your illness</string>
    <string name="message">Describe your illness</string>
    <string name="gender">Male or Female</string>
    <string name="location">Address</string>
    <string name="doctorName">Doctor Name</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="chooseTimeTitle">Choose Time</string>
    <string name="scheduleTitle">Schedule</string>
    <string name="patientName">Patient Name</string>
    <string name="about">About</string>
    <string name="get_all_appointments">Get All Appointments</string>
    <string name="select_patient">Select patient</string>
    <string name="select_doctor">Select doctor</string>
    <string name="schedule_an_appointment">Schedule an Appointment</string>
    <string name="dashboardNoAppointmentsMessage">You\'re all caught up! Have a cookie.</string>
    <string name="dashboardNoDoctorMessage">There are no doctors nearby...</string>
</resources>