<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE03A9F4"
    tools:context=".ui.RegisterPatient">

    <TextView
        android:id="@+id/txtPatientTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Patient Info"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#009688"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtPatientTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edPatientName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edPatientMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobileno"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtPatientReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edPatientMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edPatientReason"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtPatientReason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/edPatientReason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>