<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFF4F3"
        android:fitsSystemWindows="true"
        android:padding="@dimen/_10dp"
        android:id="@+id/main_layout"
        tools:context=".ui.activity.BookAppointmentActivity">

        <TextView
            android:id="@+id/txt_SelectedPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="monospace"
            android:textColor="#040A2E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="test patient" />

        <TextView
            android:id="@+id/txt_SelectedDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="monospace"
            android:textColor="#040A2E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_SelectedPatient"
            tools:text="test doctor" />


        <Button
            android:id="@+id/btnSelectPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_patient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSelectDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectPatient" />

        <CalendarView
            android:id="@+id/calenderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectDoctor" />

        <TimePicker
            android:id="@+id/timepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/calenderDate" />

        <Button
            android:id="@+id/btnSBookAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/bookAppointment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timepicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>