<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_30dp"
    android:elevation="@dimen/_10dp"
    android:padding="@dimen/_30dp"
    app:cardCornerRadius="@dimen/_30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="@dimen/_30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        tools:context=".ui.SplashScreen">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_medical_services_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/white_curvy_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/register_doctor"
            android:textColor="@color/primary_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30dp"
            android:background="@drawable/white_curvy_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/register_patient"
            android:textColor="@color/primary_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDoctor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30dp"
            android:background="@drawable/white_curvy_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/check_appointment"
            android:textColor="@color/primary_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPatient" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
