<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/doctorAvatar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.Chip"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name"
            app:layout_constraintBottom_toTopOf="@id/doctorTitle"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/doctorAvatar"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/doctorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/placeholder'
            app:layout_constraintBottom_toBottomOf="@+id/doctorAvatar"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/doctorName"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/moreOptions"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:contentDescription="@string/placeholder"
            android:padding="0dp"
            app:icon="@drawable/baseline_more_vert_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#000000"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/checkAppointmentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check_appointment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointmentSummary" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="64dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appointmentSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorAvatar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>